[package]
name = "stockpi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
axum = { version = "0.8.7", features = ["ws"] }
chrono = "0.4.42"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
